2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmime.c: (xdg_mime_shutdown): Free caches, #7496.
	Thanks to Yevgen Muntyan <muntyan@tamu.edu>.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmimecache.c: (cache_glob_node_lookup_suffix): Don't return
	MIME types if cache suffix lookup returns empty string, #9544.
	Thanks to Yevgen Muntyan <muntyan@tamu.edu>.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmimemagic.c: (_xdg_mime_magic_lookup_data): Fix issue where
	MIME type was not detected when two MIME types with parent
	relationship match and have equal priority, and child
	was found before parent in cache, #9242.
	Thanks to Tom Parker <freedesktop@tevp.net>.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmimecache.c: (_xdg_mime_cache_list_mime_parents): Fix
	several problems with this function, #9560. Thanks to Yevgen Muntyan.

2007-06-01  Christian Neumair  <cneumair@gnome.org>

	* src/xdgmimemagic.c: Don't declare errno, fixes build on Dragonfly
	BSD, GNOME #336382.

2006-07-13  Christian Neumair  <chris@gnome-de.org>

	* src/xdgmimemagic.c: (_xdg_mime_magic_parse_magic_line):
	Only declare 'i' #if LITTLE_ENDIAN. Partially fixes GNOME #340277.
	Thanks to James Andrewartha.

2006-03-02  Christian Neumair  <chris@gnome-de.org>

	* src/xdgmimeglob.c: (_xdg_glob_hash_insert_text),
	(_xdg_glob_hash_append_glob): Don't strdup the MIME type when passing
	it to _xdg_glob_hash_insert_text, but let the function itself figure
	out whether string duplication is needed. Fixes #5993.
	Thanks to Martin Wehner.

2006-02-25  Christian Neumair  <chris@gnome-de.org>

	* src/xdgmimemagic.c: (_xdg_mime_magic_lookup_data): Make
	priority equality check more robust so that it works for three or more
	matches. Also allow matchlets with 0 priority.

2006-02-19  Christian Neumair  <chris@gnome-de.org>

	* src/xdgmimemagic.c: (_xdg_mime_magic_lookup_data): When two